--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.0",
+    "@vercel/analytics": "^1.5.0",
     "@whop/checkout": "^0.0.42",
     "framer-motion": "^12.23.24",
     "next": "16.0.0",
